Fri Aug 15 00:32:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Connecting to an account, disconnecting, and then connecting to
	    any account no longer crashes.

Thu Aug 14 03:04:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Icons for accounts not signed on in the accounts window are
	    now saturated, and accounts signed on are normal. It's now
	    much easier to distinguish between signed on and signed off
	    accounts without having to click them to see the status of the
	    connect/disconnect buttons.
	  - The connect/disconnect buttons now update the selected item when
	    signed on or off.

Thu Aug 14 02:41:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added the buttons and menu items for joining and adding chats.
	    No implementation yet.

Thu Aug 14 02:22:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/send-im.png:
	  - Updated the IM icon.

Thu Aug 14 02:10:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/irc.png:
	  - Updated the IRC protocol icon.

Thu Aug 14 02:03:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Changed the Add button to drop down a menu, which currently
	    contains Add Buddy and Add Group, and will later have Add Chat.

Thu Aug 14 01:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimInputDialog.cpp:
	* src/QGaimInputDialog.h:
	* src/QGaimRequest.cpp:
	* src/QGaimRequest.h:
	* gaim.pro:
	  - Added QGaimInputDialog, and fixed the gaim_request_input UI.

Thu Aug 14 01:38:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimNotify.cpp:
	  - Synced with the latest 0.67cvs API changes.
