@@ -1,3 +1,10 @@
+Fri Aug 15 00:55:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimDialogs.cpp:
+	* src/QGaimDialogs.h:
+	  - Added the Join Chat dialog.
+
 Fri Aug 15 00:32:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
